@@ -86,17 +86,31 @@ example zone ldif is available in the doc directory.
 	zone. Reverse zone must have Dynamic update allowed. 
 	(See idnsAllowDynUpdate attribute and dyn_update configuration parameter.)
 
-* idnsForwardPolicy
-	Specifies BIND9 zone forward policy. Only relevant in conjunction 
-	with a valid idnsForwarders attribute.
+* idnsForwardPolicy (default "first")
+	Specifies BIND9 zone forward policy. Proprietary value "none"
+	is equivalent to "forwarders {};" in BIND configuration,
+	i.e. effectively disables forwarding and ignores idnsForwarders
+	attribute.
+
+	Value "none" disables forwarding for given zone and ignores
+	global forwarders. Zone with forward policy "none" is considered
+	as type "master", not "forward".
+	Values "first" and "only" are relevant in conjunction with a valid
+	idnsForwarders attribute. Their meaning is same as in BIND9.
 
 * idnsForwarders
-	Defines multiple IP addresses to which queries will be forwarded.
+	Defines multiple IP addresses to which queries will be forwarded and
+	effectively creates "forward" zones.
 	It is multi-value attribute: Each IP address (and optional port) has to
 	be in own value. BIND9 syntax for "forwarders" is required.
 	Optional port can be specified by adding " port <number>" after IP 
 	address. IPv4 and IPv6 addresses are supported.
 	Examples: "1.2.3.4" or "1.2.3.4 port 553" or "A::B" or "A::B port 553"
+
+	Zones with idnsForwarders attribute specified and forward policy other
+	than "none" are considered as "forward" zones. All records in LDAP
+	belonging to those zones are ignored and all queries are forwarded.
+
 
 5. Configuration
 ================
