@@ -1,3 +1,5 @@
+[1] Forward policy "none" was introduced.
+
 2.0
 ======
 [1] SOA serial number can be incremented automatically after each change
